# bevy

crates/bevy_ecs/: Cargo.toml
crates/bevy_ecs/src/: archetype.rs  change_detection.rs  lib.rs
crates/bevy_ecs/src/query/: fetch.rs  filter.rs  iter.rs  mod.rs  state.rs
crates/bevy_ecs/src/storage/: aligned_vec.rs  blob_vec.rs  mod.rs  sparse_set.rs  table.rs
crates/bevy_ecs/src/system/: query.rs
crates/bevy_ecs/src/world/: world_cell.rs
crates/bevy_ptr/: Cargo.toml
crates/bevy_ptr/src/: batch.rs  lib.rs
