[package]
name = "bevy_ptr"
version = "0.9.0"
edition = "2021"
description = "Utilities for working with untyped pointers in a more safe way"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "no_std"]

[dependencies]
elain = "0.3"
bytemuck = "1.12"
gcd = "2"
bevy_math = { path = "../bevy_math", version = "0.9.0-dev" }